Revision history for Form::Sensible

0.11203 2010-02-28

    * Added minimum_length to Text field (thanks lukes)
    * Added first per-field-type test in t/fields/ (also thanks lukes)

0.11202 2010-02-25

    * fixed leftover warns in Reflector.pm

0.11201 2010-02-22

    * fixed bug in Reflector.pm... Need MOAR Tests

0.11200 2010-02-21

    * Added Overview doc
    * corrected bug in validation which considered values which evaluated to 'false' to be the same as 'empty'
    * adjusted Text field rendering to include render_as => 'password' to render a text field as a password
    * adjusted password rendering to not include the existing value (for security purposes)
    * moved 'required' flag out of main field object and into validation hashref.

0.11103 2010-02-19

    * Added table based templates for HTML rendering.
    * Switched to <label> in most places for specifying a field label

0.11102 2010-02-19

    * fixed File::ShareDir capitalization in Makefile.PL

0.11101 2010-02-19

    * dropped dump_basic.t as it uses deprecated Renderer::Dump
    * FS::Renderer::Dump officially dropped due to redundancy with $form->flatten

0.11100 2010-02-17

    * Added validation tests
    * Corrected warning in coderef processing.
    * Changed coderef function format to make it easier to handle simple validation - field value passed in first.
    * Every class now has docs.  Validation docs more significant.
    
    
    