@@ -4,6 +4,9 @@ Revision history for Form::Sensible
 
     * Added minimum_length to Text field (thanks lukes)
     * Added first per-field-type test in t/fields/ (also thanks lukes)
+    * Added ability to clear form state ($form->clear_state()) 
+    * Added ability to perform complete validation easily on a single 
+      field ( $validator->validate_field($form->field('fieldname')) )
 
 0.11202 2010-02-25
 
